[package]
name = "clap_logger"
version = "0.4.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["LeSnake <dev@lesnake@posteo.de>"]
description = "Easy to use, yet powerfull logger integration for clap"
publish = false
repository = "https://github.com/LeSnake04/clap_logger/"
categories = ["development-tools", "development-tools::debugging"]
keywords = ["log", "clap", "log4rs", "logfile"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "3.2"
log = "0.4"
anyhow = "1.0"
snafu = "0.7"
chrono = {version="0.4", optional = true}
fern = {version = "0.6", optional = true}

[dev-dependencies]
trybuild = "1.0"

[features]
default = ["minimal", "prelude","full"]
minimal = ["init_logger", "console_logger"]
full = ["custom_env", "default", "logfile"]
custom_env = []
console_logger = ["init_logger","dep:fern"]
logfile = ["init_logger"]
prelude = []
init_logger = ["dep:fern", "dep:chrono"]