[package]
name = "clap_logger"
version = "0.3.1"
edition = "2021"
license = "AGPL-3.0"
authors = ["LeSnake <dev@lesnake@posteo.de>"]
description = "env_logger integration for clap"
publish = true
repository = "https://github.com/LeSnake04/clap_logger/"
categories = ["development-tools","development-tools::debugging"]
keywords = ["log", "clap","env_logger"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2"
env_logger = "0.9"
log = "0.4"

[features]
env=[]