[package]
name = "clap_logger_derive"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
unwrap_or = "1.0"
clap_logger = {version = "0.4", path = ".."}

[dev-dependencies]
trybuild = "1.0"
